force-app/main/default/objects/CLQ_OCOT_Rules_Inspected__c/CLQ_OCOT_Rules_Inspected__c.object-meta.xml
<CustomObject>
    <description>CLONE OF RULES INSPECTED&gt;ONLY TO BE USED FOR OCOT</description>
    <label>OCOT Rules Inspected</label>
    <nameField>
        <displayFormat>ORI#-{000000}</displayFormat>
        <label>OCOT Rules Inspected Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCOT Rules Inspected</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>