force-app/main/default/objects/CLQ_OCOT_Rules_Inspected__c/fields/CLQ_Enrollment_Group__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Enrollment_Group__c</fullName>
    <label>Enrollment Group</label>
    <referenceTo>CLQ_Enrollment_Group__c</referenceTo>
    <relationshipLabel>OCOT Rules Inspected</relationshipLabel>
    <relationshipName>OCOT_Rules_Inspected</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>