force-app/main/default/objects/CLQ_OCOT_Rules_Inspected__c/fields/CLQ_Rule__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>CLQ_Rule__c</referenceTo>
    <relationshipLabel>OCOT Rules Inspected</relationshipLabel>
    <relationshipName>OCOT_Rules_Inspected</relationshipName>
    <type>Lookup</type>
</CustomField>